--- a/playbooks/roles/jenkins_admin/templates/edx/var/jenkins/jobs/build-ami/config.xml.j2
+++ b/playbooks/roles/jenkins_admin/templates/edx/var/jenkins/jobs/build-ami/config.xml.j2
@@ -33,12 +33,12 @@
         </hudson.model.TextParameterDefinition>
         <hudson.model.StringParameterDefinition>
           <name>configuration</name>
-          <description>The GITREF of configuration to use.</description>
+          <description>The GITREF of configuration to use. Leave blank to default to master.</description>
           <defaultValue></defaultValue>
         </hudson.model.StringParameterDefinition>
         <hudson.model.StringParameterDefinition>
           <name>configuration_secure</name>
-          <description>The GITREF of configuration-secure repository to use.</description>
+          <description>The GITREF of configuration-secure repository to use. Leave blank to default to master.</description>
           <defaultValue></defaultValue>
         </hudson.model.StringParameterDefinition>
         <hudson.model.StringParameterDefinition>
@@ -151,27 +151,10 @@
       <nature>shell</nature>
       <command>
 #!/bin/bash -x
+export jenkins_admin_ec2_key="{{ JENKINS_ADMIN_EC2_KEY }}"
+export jenkins_admin_configuration_secure_repo="{{ JENKINS_ADMIN_CONFIGURATION_SECURE_REPO }}"
 
-if [[ "$play" == "" ]]; then
-    echo "No Play Specified. Nothing to Do."
-    exit 0
-fi
-
-export PYTHONUNBUFFERED=1
-export PIP_DOWNLOAD_CACHE=$WORKSPACE/pip-cache
-
-cd configuration
-pip install -r requirements.txt
-
-cd util/vpc-tools/
-
-echo "$refs" > /var/tmp/$BUILD_ID-refs.yml
-cat /var/tmp/$BUILD_ID-refs.yml
-
-echo "$vars" > /var/tmp/$BUILD_ID-extra-vars.yml
-cat /var/tmp/$BUILD_ID-extra-vars.yml
-
-python -u abbey.py -p $play -t c1.medium  -d $deployment -e $environment -i /edx/var/jenkins/.ssh/id_rsa -b $base_ami --vars /var/tmp/$BUILD_ID-extra-vars.yml --refs /var/tmp/$BUILD_ID-refs.yml -c $BUILD_NUMBER --configuration-version $configuration --configuration-secure-version $configuration_secure -k {{ JENKINS_ADMIN_EC2_KEY }} --configuration-secure-repo &quot;{{ JENKINS_ADMIN_CONFIGURATION_SECURE_REPO }}&quot;
+configuration/util/jenkins/build-ami.sh
       </command>
       <ignoreExitCode>false</ignoreExitCode>
     </jenkins.plugins.shiningpanda.builders.VirtualenvBuilder>
